# DeepBrown

./: .gitignore  CMakeLists.txt  DeepBrown  NeuralNet.hpp  chess.h  main.cpp  opening.book  readme.txt  run.command
chess_games_dataset/: master_games (3).pgn  master_games (4).pgn  master_games (5).pgn
chess_games_dataset/ficsgamesdb_search_197741/: ficsgamesdb_search_197741.pgn  ficsgamesdb_search_197741.txt
chess_games_dataset/ficsgamesdb_search_198080/: ficsgamesdb_search_198080.pgn  ficsgamesdb_search_198080.txt
